--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -19,12 +19,14 @@
         <ol class="menus__children">
           {% for child in menu.children %}
             <li class="menus__child">
-              {% if child.main_image? %}
-                <div class="menus-thumbnail menus-thumbnail--all">
-                  {{ child.main_image | custom_image_url: "75x75#" | image_tag }}
-                </div>
-              {% endif %}
-              <a class="menus__child-link" href="{{ menu.url }}#menu-{{child.id}}">{{ child.name }}</a>
+              <a class="menus__child-link" href="{{ menu.url }}#menu-{{child.id}}">
+                {% if child.main_image? %}
+                  <div class="menus-thumbnail menus-thumbnail--all">
+                    {{ child.main_image | custom_image_url: "100x100#" | image_tag }}
+                  </div>
+                {% endif %}
+                {{ child.name }}
+              </a>
             </li>
           {% endfor %}
         </ol>
