--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -31,35 +31,40 @@
         <ul class="social__items">
           {% if restaurant.phone? %}
           <li class="social__item">
-            <a class="social__link icon-phone" href="tel:{{ restaurant.phone_uri }}">
+            <a class="social__link" href="tel:{{ restaurant.phone_uri }}">
+              <i class="icon-phone"></i>
               <span class="social__label">{{ restaurant.phone }}</span>
             </a>
           </li>
           {% endif %}
           {% if restaurant.email %}
             <li class="social__item">
-              <a class="social__link icon-envelope" href="mailto:#{{restaurant.email}}">
+              <a class="social__link" href="mailto:#{{restaurant.email}}">
+                <i class="icon-envelope"></i>
                 <span class="social__label">{{ "Envoyer un email" | t }}</span>
               </a>
             </li>
           {% endif %}
           {% if restaurant.facebook_url? %}
             <li class="social__item">
-              <a class="social__link icon-social-facebook" href="{{restaurant.facebook_url}}">
+              <a class="social__link" href="{{restaurant.facebook_url}}">
+                <i class="icon-social-facebook"></i>
                 <span class="social__label">{{ "Notre page Facebook" | t }}</span>
               </a>
             </li>
           {% endif %}
           {% if restaurant.twitter_url? %}
             <li class="social__item">
-              <a class="social__link icon-social-twitter" href="{{restaurant.twitter_url}}">
+              <a class="social__link" href="{{restaurant.twitter_url}}">
+                <i class="icon-social-twitter"></i>
                 <span class="social__label">{{ "Notre compte Twitter" | t }}</span>
               </a>
             </li>
           {% endif %}
           {% if restaurant.tripadvisor_url? %}
             <li class="social__item">
-              <a class="social__link icon-tripadvisor" href="{{restaurant.tripadvisor_url}}">
+              <a class="social__link" href="{{restaurant.tripadvisor_url}}">
+                <i class="icon-tripadvisor"></i>
                 <span class="social__label">{{ "Notre page TripAdvisor" | t }}</span>
               </a>
             </li>
